Fix where idai-welt-menu was too narrow.

--- a/src/idai-components.scss
+++ b/src/idai-components.scss
@@ -8,3 +8,21 @@
 @import "messages/idai-messages";
 @import "forms/forms";
 @import "helpers";
+
+
+.dropdown-menu {
+  background-clip: padding-box !important;
+  background-color: #fff !important;
+  border: 1px solid rgba(0, 0, 0, 0.15) !important;
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.176) !important;
+  font-size: 14px !important;
+  left: 0;
+  list-style: outside none none;
+  margin: 0 !important;
+  min-width: 160px !important;
+  padding: 5px 0 !important;
+  position: absolute !important;
+  text-align: left !important;
+  top: 100% !important;
+  z-index: 1000 !important;
+}
