--- a/src/layout/idai-navbar.scss
+++ b/src/layout/idai-navbar.scss
@@ -9,14 +9,6 @@
     margin-bottom: -14px;
   }
 
-  .navbar-form {
-    //padding: 10px 15px;
-    //margin: 8px 0 !important;
-    width: auto;
-  }
-
-
-
   // display arrow on top of dropdown menu for idai.world menu
   .nav > li > .dropdown-menu:before {
     content: '';
@@ -29,47 +21,7 @@
     left: 25px;
   }
 
-  .form-control:focus {
-    -webkit-box-shadow: none;
-    box-shadow: none;
-  }
-
-  .form-control:focus ~ .input-group-btn .btn-default {
-    border: 1px solid $input-border-focus;
-  }
-
-
-  .navbar-default .navbar-collapse, .navbar-default .navbar-form {
-    border: none !important;
-  }
-
-  .navbar-form {
-    box-shadow: none !important;
-  }
-
-  // Dropdown menu
-  .open > .dropdown-menu {
-    display: block;
-  }
-
-  .dropdown-menu {
-    background-clip: padding-box !important;
-    background-color: #fff !important;
-    border: 1px solid rgba(0, 0, 0, 0.15) !important;
-    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.176) !important;
-    font-size: 14px !important;
-    left: 0;
-    list-style: outside none none;
-    margin: 0 !important;
-    min-width: 160px !important;
-    padding: 5px 0 !important;
-    position: absolute !important;
-    text-align: left !important;
-    top: 100% !important;
-    z-index: 1000 !important;
-  }
-
-  .dropdown-menu > li > a {
+  .idai-welt-menu .dropdown-menu > li > a {
     clear: both !important;
     color: #333 !important;
     display: block !important;
@@ -83,12 +35,6 @@
     padding: 15px 11px 15px 11px;
   }
 
-
-
-
-
-
-
   input {
     margin: 8px 0 !important;
   }
@@ -98,50 +44,53 @@
   // High screen resolutions
   @media (min-width: $grid-float-breakpoint) {
 
-    #navbar-search {
+    .idai-navbar-search {
+
       width: calc(100% - 800px);
       float: left;
       display: inline;
-    }
 
-    .input-group  {
-      float: left;
-      margin-bottom: 0;
-      position: relative;
-      width: 100%;
-      z-index: 2;
+      .custom-popup-wrapper, .custom-popup-wrapper .dropdown-menu {
+        width: 100%;
+      }
 
-    }
+      .custom-popup-wrapper li a {
+        max-width: 100%;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
 
-    .custom-popup-wrapper, .dropdown-menu {
-      width: 100%;
-    }
-
-    .custom-popup-wrapper li a {
-      max-width: 100%;
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
+      .input-group  {
+        float: left;
+        margin-bottom: 0;
+        position: relative;
+        width: 100%;
+        z-index: 2;
+      }
     }
   }
 
   // Small and medium sized screen resolutions
   @media (max-width: $grid-float-breakpoint) {
 
-    .input-group {
-      float: left;
-      width: calc(100% - 370px);
-    }
+    .idai-navbar-search {
 
-    .custom-popup-wrapper, .dropdown-menu {
-      width: 100%;
-    }
+      .input-group {
+        float: left;
+        width: calc(100% - 370px);
+      }
 
-    .custom-popup-wrapper li a {
-      max-width: 100%;
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
+      .custom-popup-wrapper, .dropdown-menu {
+        width: 100%;
+      }
+
+      .custom-popup-wrapper li a {
+        max-width: 100%;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
     }
 
     .navbar-left {
@@ -191,7 +140,7 @@
   // Very small screen resolutions
   @media (max-width: $screen-xs) {
 
-    #navbar-search {
+    .idai-navbar-search {
       display: none;
       padding-right: 0;
       padding-left: 3px;
